--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "bugs": {
     "url": "https://github.com/stickslammer/FitnessTrac.kr/issues"
   },
-  "homepage": "https://github.com/stickslammer/FitnessTrac.kr#readme",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3"
   },
   "browserslist": {
