--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "url": "https://github.com/stickslammer/FitnessTrac.kr/issues"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^0.9.5"
   },
   "browserslist": {
     "production": [
