--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "dependencies": {
     "bootstrap": "^3.4.1",
+    "node": "^16.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^0.9.5"
+    "react-scripts": "^4.0.3"
   },
   "browserslist": {
     "production": [
