--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "url": "https://github.com/stickslammer/FitnessTrac.kr/issues"
   },
   "dependencies": {
-    "bootstrap": "^3.4.1",
-    "node": "^16.10.0",
-    "node-bin-setup": "^1.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3"
+  "react": "^17.0.2",
+  "react-dom": "^17.0.2",
+  "react-router": "^5.2.1",
+  "react-router-dom": "^5.3.0",
+  "react-scripts": "^4.0.3"
   },
   "browserslist": {
     "production": [
@@ -38,6 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
-  "description": ""
+  "devDependencies": {}
 }
