--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "url": "https://github.com/stickslammer/FitnessTrac.kr/issues"
   },
   "dependencies": {
-  "react": "^17.0.2",
-  "react-dom": "^17.0.2",
-  "react-router": "^5.2.1",
-  "react-router-dom": "^5.3.0",
-  "react-scripts": "^4.0.3"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "webpack-node-externals": "^3.0.0"
   },
   "browserslist": {
     "production": [
@@ -35,6 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
